# sspu-gamedev-tutorial

./: .gitignore  LICENSE  windows.md
dino/: CMakeLists.txt
dino/include/: dino.hpp  enemy.hpp  game.hpp  ground.hpp  sky.hpp  text.hpp  texture_cycler.hpp  texture_loader.hpp  textures.hpp  util.hpp  window.hpp
dino/resources/shaders/: shader.frag  shader.vert  sky.frag
dino/src/: dino.cpp  enemy.cpp  game.cpp  ground.cpp  main.cpp  sky.cpp  text.cpp  texture_cycler.cpp  texture_loader.cpp  textures.cpp  window.cpp
keyboard_input/: CMakeLists.txt
keyboard_input/src/: main.cpp
mouse_hover_detection/: CMakeLists.txt
mouse_hover_detection/src/: main.cpp
mouse_input/: CMakeLists.txt
mouse_input/src/: main.cpp
sprites/: CMakeLists.txt
sprites/include/: dino.hpp
sprites/src/: dino.cpp  main.cpp
tmpl_project/: CMakeLists.txt
tmpl_project/include/: example.hpp
tmpl_project/src/: example.cpp  main.cpp
windows/: CMakeLists.txt
windows/src/: main.cpp
